# kache1.1_jimenez

./: .env.example  .gitignore  README.md  main.py  manage.py  pyproject.toml
config/: settings.py  urls.py
store/: admin.py  apps.py  filters.py  pagination.py  permissions.py  signals.py  urls.py
store/migrations/: 0001_initial.py
store/models/: __init__.py  categoria.py  historial_precio.py  precio.py  producto.py  sucursal.py  supermercado.py
store/serializers/: __init__.py  categoria_serializer.py  historial_precio_serializer.py  precio_serializer.py  producto_serializer.py  sucursal_serializer.py  supermercado_serializer.py
store/tests/: conftest.py  factories.py  test_categoria.py  test_historial_precio.py  test_precio.py  test_producto.py  test_sucursal.py  test_supermercado.py
store/views/: __init__.py  categoria_view.py  historial_precio_view.py  precio_view.py  producto_view.py  sucursal_view.py  supermercado_view.py
