[project]
name = "precios-project"
version = "0.1.0"
description = "Comparador de Precios de Supermercados"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.0,<6.0",
    "djangorestframework>=3.15",
    "django-cors-headers>=4.3",
    "django-filter>=24.0",
    "python-decouple>=3.8",
    "psycopg2-binary>=2.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "factory-boy>=3.3",
    "faker>=24.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
pythonpath = ["."]
addopts = "-v --tb=short"
testpaths = ["store/tests"]

